--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.2",
+    "apexcharts": "^3.48.0",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.2",
     "express": "^4.18.2",
+    "ng-apexcharts": "^1.9.0",
+    "ng2-charts": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
