Register funcionando al 80%, falta agregar animacion de carga y el reenvio al login

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
       "@resources/*": [
         "./src/resources/*"
       ],
+      "@services/*": [
+        "./src/app/Services/*"
+      ],
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
