Terminando vista para actualizar la informacion de un usuario + añadiendo  la libreria toastr para notificacines informativas no interactivas con el usuario

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
       "@services/*": [
         "./src/app/Services/*"
       ],
+      "@components/*": [
+        "./src/app/Components/*"
+      ]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
