--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.2",
     "express": "^4.18.2",
+    "laravel-echo": "^1.16.1",
     "ng-apexcharts": "^1.9.0",
     "ng2-charts": "^6.0.0",
     "ngx-toastr": "^18.0.0",
+    "pusher-js": "^8.4.0-rc2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
