--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.2",
-    "apexcharts": "^3.48.0",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.2",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "express": "^4.18.2",
     "laravel-echo": "^1.16.1",
-    "ng-apexcharts": "^1.9.0",
     "ng2-charts": "^6.0.0",
     "ngx-toastr": "^18.0.0",
     "pusher-js": "^8.4.0-rc2",
